2014-11-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/ctype.h: compare as unsigned chars, added static asserts on EOF
	* device/lib/isdigit.c,
	* device/lib/islower.c,
	* device/lib/isupper.c: include stdio.h to enable the static assert in ctype.h
	* support/regression/tests/gcc-torture-execute-20050613-1.c: split up ASSERTs

2014-11-23 Molnar Karoly <molnarkaroly AT users.sf.net>

	* device/include/pic14/pic14devices.txt:
	  Bugfix, thanks to Franz.

2014-11-23 Ben Shi <powerstudio1st AT 163.com>

	* support/regression/tests/bug-2304.c:
	  Improve this test case.
	* sdas/linksrc/lkmain.c:
	  Add bound check.

2014-11-22 Ben Shi <powerstudio1st AT 163.com>

	* src/stm8/peep.c:
	  Fix potential bugs.

2014-11-22 Ben Shi <powerstudio1st AT 163.com>

	* src/SDCCpeeph.c:
	  Add function notSimilar().
	* src/stm8/peep.c:
	  Make notUsed() more aggressive.
	* src/stm8/peeph.def:
	  Add more rules.

2014-11-21 Philipp Klaus Krause <philipp@informatik.uni-frankfurt.de>

	* src/stm8/main.c:
	  Comment expaining why we can't use the byte at 0 in C.

2014-11-21 Ben Shi <powerstudio1st AT 163.com>

	* device/lib/stm8/heap.s:
	* device/lib/stm8/Makefile.in:
	  Add support for heap operation.
	* support/regression/tests/gcc-torture-execute-920810-1.c:
	* support/regression/tests/malloc:
	  enable test cases which use malloc().

2014-11-19 Ben Shi <powerstudio1st AT 163.com>

	* sdas/linksrc/aslink.h:
	  Change PATH_MAX to a proper value on x86_64, for bug #2316.

2014-11-18 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/iso646.h,
	  support/regression/tests/iso646.c:
	  Fixed bug #2314.

2014-11-15 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr40057.c:
	  Disable test for host, since it fails on NetBSD.

2014-11-14 Philipp Klaus Krause <pkk AT spth.de>

	* support/sdbinutils/bfd/configure,
	  support/sdbinutils/bfd/warning.m4,
	  support/sdbinutils/binutils/configure: