@@ -74,7 +74,7 @@ SDCC_REQUIRE_PROG($LEX, flex)
 
 AC_LANG_C
 
-AC_CHECK_HEADERS(endian.h sys/endian.h machine/endian.h sys/isa_defs.h)
+AC_CHECK_HEADERS(endian.h sys/endian.h machine/endian.h sys/isa_defs.h stdalign.h)
 AC_LANG_PUSH([C++])
 AC_CHECK_HEADERS(stx/btree_set.h stx/btree_map.h,,AC_MSG_WARN([[STX library missing, using STL instead.]]))
 AC_CHECK_HEADERS(boost/graph/adjacency_list.hpp,,AC_MSG_ERROR([[boost library not found (boost/graph/adjacency_list.hpp).]]))
@@ -94,6 +94,7 @@ esac
 # ===========================================================================
 AC_CHECK_FUNCS(strerror)
 AC_CHECK_FUNCS(vsnprintf snprintf vsprintf mkstemp)
+AC_CHECK_FUNCS(strndup)
 
 
 # Macro definitions
